feat: update API
